(fix): add key to collapse item to fix performance issue

--- a/packages/core/src/collapse/editor.scss
+++ b/packages/core/src/collapse/editor.scss
@@ -1,5 +1,5 @@
 .yard-blocks-collapse {
-	padding: 0 1rem;
+	padding: 1rem;
 }
 
 .yard-blocks-collapse-item__header {
